// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-diagnostics - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Debug Azure production issues on Azure using AppLens, Azure Monitor, resource health, and safe triage. WHEN: debug production issues, troubleshoot app service, app service high CPU, app service deployment failure, troubleshoot container apps, troubleshoot functions, troubleshoot AKS, kubectl cannot connect, kube-system/CoreDNS failures, pod pending, crashloop, node not ready, upgrade failures, analyze logs, KQL, insights, image pull failures, cold start issues, health probe failures, resource health, root cause of errors.",
  "extractedKeywords": [
    "aks",
    "analyze",
    "app service",
    "applens",
    "apps",
    "azure",
    "cannot",
    "cause",
    "cli",
    "cold",
    "connect",
    "container",
    "coredns",
    "crashloop",
    "debug",
    "deploy",
    "deployment",
    "diagnostic",
    "diagnostics",
    "errors",
    "failure",
    "failures",
    "function",
    "functions",
    "health",
    "high",
    "image",
    "insights",
    "issues",
    "kube-system",
    "kubectl",
    "kubernetes",
    "logs",
    "mcp",
    "monitor",
    "networking",
    "node",
    "pending",
    "probe",
    "production",
    "pull",
    "ready",
    "resource",
    "root",
    "safe",
    "service",
    "start",
    "triage",
    "troubleshoot",
    "upgrade",
    "using",
    "when",
  ],
  "name": "azure-diagnostics",
}
`;

exports[`azure-diagnostics - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "aks",
  "analyze",
  "app service",
  "applens",
  "apps",
  "azure",
  "cannot",
  "cause",
  "cli",
  "cold",
  "connect",
  "container",
  "coredns",
  "crashloop",
  "debug",
  "deploy",
  "deployment",
  "diagnostic",
  "diagnostics",
  "errors",
  "failure",
  "failures",
  "function",
  "functions",
  "health",
  "high",
  "image",
  "insights",
  "issues",
  "kube-system",
  "kubectl",
  "kubernetes",
  "logs",
  "mcp",
  "monitor",
  "networking",
  "node",
  "pending",
  "probe",
  "production",
  "pull",
  "ready",
  "resource",
  "root",
  "safe",
  "service",
  "start",
  "triage",
  "troubleshoot",
  "upgrade",
  "using",
  "when",
]
`;
